# keteRay

./: .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: config.json
lib/imgui-1.88/: CMakeLists.txt  imgui_demo.cpp
lib/imgui-sfml/: CMakeLists.txt
lib/imgui-sfml-2.5/: CMakeLists.txt
src/: CMakeLists.txt  camera.cpp  camera.hpp  config.cpp  config.hpp  gui.cpp  gui.hpp  hittable.cpp  hittable.hpp  keteray.cpp  keteray.hpp  libppm.hpp  main.cpp  material.cpp  material.hpp  owert.cpp  owert.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  types.hpp
src/gui/: CMakeLists.txt  gui.cpp  gui.hpp
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  keteray.cpp  keteray.hpp  random.cpp  random.hpp  ray.hpp  renderer_types.hpp  types.hpp
src/world/: CMakeLists.txt  hittable.cpp  hittable.hpp  material.cpp  material.hpp  rectangle.cpp  rectangle.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  texture.cpp  texture.hpp  world_types.hpp
